--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,6 @@
 {{.Content}}
 <ul>
   {{ range .Pages }}
-  <li><a href="{{.URL}}">{{.Name}}</a></li>
+  <li><a href="{{.URL}}">{{replace .File.BaseFileName "_" " "}}</a></li>
   {{end}}
 </ul>
