Adding Navigation links to pages on home page.Retaining order maintained in old website

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,20 @@
-{{.Content}}
-<ul>
-  {{ range .Pages }}
-  <li><a href="{{.URL}}">{{replace .File.BaseFileName "_" " "}}</a></li>
-  {{end}}
-</ul>
+<html>
+<body>
+<div style="text-align:center;" class="my-block">
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <h1>
+    {{.Content}}
+  </h1>
+</div>
+</body>
+</html>
