--- a/themes/hugo-book/assets/_markdown.scss
+++ b/themes/hugo-book/assets/_markdown.scss
@@ -18,7 +18,7 @@ $block-border-radius: 0.15rem;
   b, optgroup, strong {
     font-weight: 700;
   }
-  
+
   a {
     text-decoration: none;
 
@@ -56,5 +56,10 @@ $block-border-radius: 0.15rem;
 
   table tr td {
     padding: $padding-8;
+  }
+
+  img {
+    width: 90%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 }
