Made the following changes: 1. Added logo above the menu - click redirect to gocd.org 2. Changed font to Open Sans 3. Added 20px padding above h1.h2,h3 4. Made h3 bold 5. Link text in body is now bold 6. Updated the visited link color to #94399e 7. Updated the aws-sdk gem to aws-sdk-s3 8. Added a 'Edit this page' link in the footer

--- a/themes/hugo-book/assets/_variables.scss
+++ b/themes/hugo-book/assets/_variables.scss
@@ -22,7 +22,7 @@ $gray-900: #212529;
 $black: #000;
 
 $color-link: #004ed0;
-$color-visited-link: #8440f1;
+$color-visited-link: #94399e;
 
 $body-background: white;
 $body-font-color: $gray-800;
