Moving md partials to partials folder. This will not generate the htmls of partials.

--- a/layouts/shortcodes/include.html
+++ b/layouts/shortcodes/include.html
@@ -1,6 +1,6 @@
 {{$file := .Get "file"}}
 {{- if eq (.Get "markdown") "true" -}}
-{{- $file  | readFile | markdownify -}}
+{{- partial $file | markdownify -}}
 {{- else -}}
-{{ $file  | readFile | safeHTML }}
+{{ partial $file | safeHTML }}
 {{- end -}}
