--- a/themes/hugo-book/layouts/partials/docs/html-head.html
+++ b/themes/hugo-book/layouts/partials/docs/html-head.html
@@ -5,7 +5,8 @@
 <meta name="description" content="{{.Params.description | default "GoCD is an open source continuous delivery server that helps organizations increase productivity and deliver high quality software through automation." }}"/>
 <meta name="keywords" content="{{ .Params.keywords | default "continuous delivery, software, continuous integration, open source, blog, software development, tools, automation, deployment pipelines, devops, techniques" }}"/>
 <link rel="canonical" href="{{ .Site.Params.CurrentBaseURL }}/{{ .File.Path | replaceRE "_index.md" "" | replaceRE "index.html.md" "" | replaceRE "_index.html" "" | replaceRE "README.md" "" |  replaceRE "readme.md" "" |  replaceRE ".md" ".html" |  replaceRE ".adoc" ".html" }}"/>
-<script async src="{{ "javascripts/_gdpr-banner.js" | relURL }}" type="text/javascript"></script>
+<script src="{{ "javascripts/_gdpr-banner.js" | relURL }}" type="text/javascript"></script>
 <link rel="stylesheet" href="{{ "normalize.min.css" | relURL }}"/>
+<link rel="stylesheet" href="{{ "stylesheets/website.css" | relURL }}"/>
 {{ $styles := resources.Get "book.scss" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
 <link rel="stylesheet" href="{{ $styles.RelPermalink }}"/>
