Adding google analytics tracking code and template for including script.

--- a/themes/hugo-book/layouts/partials/docs/html-head.html
+++ b/themes/hugo-book/layouts/partials/docs/html-head.html
@@ -10,3 +10,4 @@
 <link rel="stylesheet" href="{{ "stylesheets/website.css" | relURL }}"/>
 {{ $styles := resources.Get "book.scss" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
 <link rel="stylesheet" href="{{ $styles.RelPermalink }}"/>
+{{ template "_internal/google_analytics_async.html" . }}
