--- a/themes/hugo-book/layouts/partials/docs/menu-bundle.html
+++ b/themes/hugo-book/layouts/partials/docs/menu-bundle.html
@@ -1,3 +1,16 @@
+{{ $attrEq := "$=" }}
+{{ $attrVal := .RelPermalink }}
+{{ if eq .RelPermalink "/" }}
+  {{ $attrEq = "=" }}
+  {{ $attrVal = .Permalink }}
+{{ end }}
+
+<style>
+  nav ul a[href{{ $attrEq }}"{{ $attrVal }}"] {
+  color: {{ default "#004ed0" .Site.Params.BookMenuBundleActiveLinkColor }};
+  }
+</style>
+
 {{ with .Site.GetPage .Site.Params.BookMenuBundle }}
   {{- .Content -}}
 {{ end }}
