Fixing the menu link styling for home page.

--- a/themes/hugo-book/layouts/partials/docs/menu-bundle.html
+++ b/themes/hugo-book/layouts/partials/docs/menu-bundle.html
@@ -2,7 +2,7 @@
 {{ $attrVal := .RelPermalink }}
 {{ if eq .RelPermalink "/" }}
   {{ $attrEq = "=" }}
-  {{ $attrVal = .Permalink }}
+  {{ $attrVal = "./" }}
 {{ end }}
 
 <style>
