--- a/themes/hugo-book/assets/book.scss
+++ b/themes/hugo-book/assets/book.scss
@@ -97,12 +97,17 @@ ul.pagination {
 .book-menu {
   flex: 0 0 $menu-width;
   font-size: $font-size-14;
+  padding: 0 20px;
 
   nav {
     width: $menu-width;
     padding: $padding-16;
 
     @include fixed;
+
+    @media (min-width: 44rem){
+      left: 12px;
+    }
   }
 
   @include dark-links;
@@ -130,6 +135,7 @@ ul.pagination {
     padding: $padding-16;
 
     @include fixed;
+    // left: 12px;
   }
 
   nav > ul > li {
