--- a/themes/hugo-book/assets/_markdown.scss
+++ b/themes/hugo-book/assets/_markdown.scss
@@ -4,19 +4,14 @@ $block-border-radius: 0.15rem;
 
 .markdown {
   line-height: 1.7;
-
   > :first-child {
     margin-top: 0;
     line-height: 1em;
   }
 
   h1, h2, h3, h4, h5 {
-    font-weight: 400;
-    line-height: 1.25;
-  }
-
-  h3 {
     font-weight: 700;
+    line-height: 1.25;
   }
 
   b, optgroup, strong {
@@ -63,7 +58,20 @@ $block-border-radius: 0.15rem;
     border: 1px solid $body-font-color;
   }
 
+  table {
+    border-spacing: 0;
+  }
+
   img {
     max-width: 90%;
   }
+}
+
+.book-page {
+  width: 100% !important; 
+}
+
+
+#TableOfContents {
+  margin: 2rem 1rem;
 }
