Sanjana,CK | Adding JS to set the scroll position to last clicked link position. Enabling BookEnableJS flag to true

--- a/themes/hugo-book/layouts/partials/docs/menu-bundle.html
+++ b/themes/hugo-book/layouts/partials/docs/menu-bundle.html
@@ -4,6 +4,9 @@
   {{ $attrEq = "=" }}
   {{ $attrVal = "./" }}
 {{ end }}
+{{ if .Site.Params.BookEnableJS }}
+  {{- template "jsmenu" . -}}
+{{ end }}
 
 <style>
   nav ul a[href{{ $attrEq }}"{{ $attrVal }}"] {
