--- a/themes/hugo-book/assets/_markdown.scss
+++ b/themes/hugo-book/assets/_markdown.scss
@@ -93,13 +93,30 @@ $block-border-radius: 0.15rem;
   margin: 2rem 1rem;
 }
 
-::-webkit-scrollbar {
-  -webkit-appearance: none;
-  width: 7px;
+@media (min-width: 759px){ 
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+  }
 }
 
-::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  background-color: rgba(0,0,0,.5);
-  -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+.book-menu::after {  
+  content: '';
+  position: fixed;
+  height: 80px;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background: linear-gradient(to bottom, rgba(251, 251, 251, 1) 0%, rgba(251, 251, 251, 0) 100%);
+
+  @media (min-width: 759px){
+    width: 22%;
+  }
+
 }
