--- a/themes/hugo-book/layouts/partials/docs/shared.html
+++ b/themes/hugo-book/layouts/partials/docs/shared.html
@@ -16,15 +16,15 @@
         var menu = document.querySelector('aside.book-menu nav')
         addEventListener('beforeunload', function(event) {
             localStorage.setItem('menu.scrollTop', menu.scrollTop)
-            console.log("Setting scrolltop before unload:", menu.scrollTop)
         });
     })()
-    $(document).ready(function(){
+    var loadFunction = function(){
         var menu = document.querySelector('aside.book-menu nav')
         var top = parseInt(localStorage.getItem('menu.scrollTop'));
         $(menu).animate({
             scrollTop: top
-        }, "slow")
-    })
+        }, 10)
+    }
+    window.onload = loadFunction();
 </script>
 {{ end }}
