Changing window.onLoad to document.ready to set the scroll position.

--- a/themes/hugo-book/layouts/partials/docs/shared.html
+++ b/themes/hugo-book/layouts/partials/docs/shared.html
@@ -17,14 +17,14 @@
         addEventListener('beforeunload', function(event) {
             localStorage.setItem('menu.scrollTop', menu.scrollTop)
         });
-    })()
-    var loadFunction = function(){
+    })();
+    function loadFunction(){
         var menu = document.querySelector('aside.book-menu nav')
         var top = parseInt(localStorage.getItem('menu.scrollTop'));
         $(menu).animate({
             scrollTop: top
         }, 10)
     }
-    window.onload = loadFunction();
+    $(document).ready = loadFunction();
 </script>
 {{ end }}
