--- a/themes/hugo-book/assets/_markdown.scss
+++ b/themes/hugo-book/assets/_markdown.scss
@@ -109,12 +109,11 @@ $block-border-radius: 0.15rem;
 .book-menu::after {  
   content: '';
   position: fixed;
-  height: 80px;
+  height: 40px;
   left: 0;
   bottom: 0;
   width: 100%;
-  background: linear-gradient(to bottom, rgba(251, 251, 251, 1) 0%, rgba(251, 251, 251, 0) 100%);
-
+  background: linear-gradient(to top, rgba(255, 255 , 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
   @media (min-width: 759px){
     width: 22%;
   }
