--- a/themes/hugo-book/assets/_markdown.scss
+++ b/themes/hugo-book/assets/_markdown.scss
@@ -4,6 +4,7 @@ $block-border-radius: 0.15rem;
 
 .markdown {
   line-height: 1.7;
+  margin-left: 20px;
   > :first-child {
     margin-top: 0;
     line-height: 1em;
